kube/base/archrepod/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archrepod
spec:
  replicas: 1
  revisionHistoryLimit: 1
  template:
    spec:
      containers:
        - args:
            - -data=/data
          name: archrepod
          image: docker.seankhliao.com/archrepod:latest
          env: []
          ports:
            - name: http
              containerPort: 8080
            - name: grpc
              containerPort: 8081
          volumeMounts:
            - mountPath: /data
              name: data
      enableServiceLinks: false
      serviceAccountName: archrepod
      terminationGracePeriodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: archrepod
