kube/base/archrepod/service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: archrepod
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: admin
      port: 8090
