kube/base/archrepod/ingressroute.k8s.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: archrepod
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`archrepod.seankhliao.com`)
    kind: Rule
    services:
    - name: archrepod
      port: 80
  tls:
    certResolver: default
